@startuml Sistema de Declaración de Impuestos 2023 - MVC

' DEFINICIÓN DE CLASES
package "Modelo" {
  class Contribuyente {
    -nombre: String
    -cedula: String
    -direccion: String
    -telefono: String
    -email: String
    -ocupacion: String
    +getNombre(): String
    +setNombre(nombre: String): void
    +getCedula(): String
    +setCedula(cedula: String): void
    +getDireccion(): String
    +setDireccion(direccion: String): void
    +getTelefono(): String
    +setTelefono(telefono: String): void
    +getEmail(): String
    +setEmail(email: String): void
    +getOcupacion(): String
    +setOcupacion(ocupacion: String): void
    +getDatos(): String[]
    +setDatos(nombre: String, cedula: String, direccion: String, telefono: String, email: String, ocupacion: String): void
  }

  class Sueldo {
    -mes: int
    -monto: double
    -aporteIESS: double
    -impuestoRetenido: double
    +getMes(): int
    +setMes(mes: int): void
    +getMonto(): double
    +setMonto(monto: double): void
    +getAporteIESS(): double
    +setAporteIESS(aporteIESS: double): void
    +getImpuestoRetenido(): double
    +setImpuestoRetenido(impuestoRetenido: double): void
    +getMontoNeto(): double
  }

  enum CategoriaGasto {
    VIVIENDA
    EDUCACION
    ALIMENTACION
    VESTIMENTA
    SALUD
    TURISMO
    +getLimiteMaximoDeducible(ingresoAnual: double): double
  }

  class Factura {
    -numero: String
    -proveedor: String
    -fecha: LocalDate
    -monto: double
    -iva: double
    -categoria: CategoriaGasto
    -deducible: boolean
    +getNumero(): String
    +setNumero(numero: String): void
    +getProveedor(): String
    +setProveedor(proveedor: String): void
    +getFecha(): LocalDate
    +setFecha(fecha: LocalDate): void
    +getMonto(): double
    +setMonto(monto: double): void
    +getIva(): double
    +setIva(iva: double): void
    +getCategoria(): CategoriaGasto
    +setCategoria(categoria: CategoriaGasto): void
    +isDeducible(): boolean
    +setDeducible(deducible: boolean): void
    +getMontoDeducible(): double
  }

  class TablaImpuestoRenta {
    -anio: int
    -rangos: ArrayList<RangoImpuesto>
    +TablaImpuestoRenta(anio: int)
    +calcularImpuesto(baseImponible: double): double
    +buscarRango(baseImponible: double): RangoImpuesto
    +getAnio(): int
    +getRangos(): ArrayList<RangoImpuesto>
  }

  class RangoImpuesto {
    -fraccionBasica: double
    -fraccionExcedente: double
    -impuestoFraccionBasica: double
    -porcentajeFraccionExcedente: double
    +getFraccionBasica(): double
    +getFraccionExcedente(): double
    +getImpuestoFraccionBasica(): double
    +getPorcentajeFraccionExcedente(): double
  }

  class Declaracion {
    -anio: int
    -estado: String
    -sueldosMensuales: ArrayList<Sueldo>
    -facturas: ArrayList<Factura>
    -ingresoAnual: double
    -gastosDeducibles: double
    -baseImponible: double
    -impuestoCausado: double
    -impuestoRetenido: double
    -saldoAPagar: double
    -tablaImpuesto: TablaImpuestoRenta
    +getAnio(): int
    +setAnio(anio: int): void
    +getEstado(): String
    +setEstado(estado: String): void
    +agregarSueldo(sueldo: Sueldo): void
    +agregarFactura(factura: Factura): void
    +validarLimitesDeducibles(): boolean
    +calcularIngresoAnual(): double
    +calcularGastosDeducibles(): double
    +calcularBaseImponible(): double
    +calcularImpuestoCausado(): double
    +calcularSaldoAPagar(): double
    +getDatosResumen(): String[]
    +getSueldosMensuales(): ArrayList<Sueldo>
    +getFacturas(): ArrayList<Factura>
    +getTotalGastosPorCategoria(): Map<CategoriaGasto, Double>
    +getLimitesDeduciblesPorCategoria(): Map<CategoriaGasto, Double>
  }

  class ValidadorDatos {
    +{static} validarCedula(cedula: String): boolean
    +{static} validarEmail(email: String): boolean
    +{static} validarFactura(numeroFactura: String): boolean
    +{static} validarMontoGasto(categoria: CategoriaGasto, monto: double, ingresoAnual: double): boolean
    +{static} validarFecha(fecha: LocalDate, anioDeclaracion: int): boolean
  }
}

package "Controlador" {
  class SistemaController {
    -contribuyente: Contribuyente
    -declaracion: Declaracion
    -validador: ValidadorDatos
    +registrarContribuyente(nombre: String, cedula: String, direccion: String, telefono: String, email: String, ocupacion: String): boolean
    +agregarSueldo(mes: int, monto: double, aporteIESS: double, impuestoRetenido: double): boolean
    +agregarFactura(numero: String, proveedor: String, fecha: LocalDate, monto: double, iva: double, categoria: CategoriaGasto): boolean
    +validarDatosDeclaracion(): boolean
    +calcularDeclaracion(): double
    +obtenerLimitesDeducibles(): Map<CategoriaGasto, Double>
    +obtenerGastosPorCategoria(): Map<CategoriaGasto, Double>
    +obtenerResumenDeclaracion(): String[]
    +guardarDatos(nombreArchivo: String): boolean
    +cargarDatos(nombreArchivo: String): boolean
    +getContribuyente(): Contribuyente
    +getDeclaracion(): Declaracion
  }
}

package "Vista" {
  class MenuPrincipal {
    -controller: SistemaController
    -scanner: Scanner
    +mostrarMenu(): void
    +leerDatos(mensaje: String): String
    +leerNumero(mensaje: String, minimo: double, maximo: double): double
    +leerEntero(mensaje: String, minimo: int, maximo: int): int
    +leerFecha(mensaje: String): LocalDate
    +leerCategoria(): CategoriaGasto
    +mostrarResultados(resultados: String[]): void
    +mostrarTablaGastos(gastos: Map<CategoriaGasto, Double>, limites: Map<CategoriaGasto, Double>): void
    +main(args: String[]): void {static}
  }
}

' RELACIONES ENTRE CLASES
Contribuyente "1" --o "1" Declaracion
Declaracion "1" o-- "0..12" Sueldo
Declaracion "1" o-- "0..*" Factura
Declaracion "1" --> "1" TablaImpuestoRenta
TablaImpuestoRenta "1" o-- "7..*" RangoImpuesto
Factura "1" --> "1" CategoriaGasto
SistemaController --> Contribuyente
SistemaController --> Declaracion
SistemaController --> ValidadorDatos
MenuPrincipal --> SistemaController

' INSTANCIAS (OBJETOS) DE LAS CLASES
object "juan:Contribuyente" as contribuyente1 {
  nombre = "Juan Pérez"
  cedula = "1104567890"
  direccion = "Av. Principal 123"
  telefono = "0991234567"
  email = "juan.perez@email.com"
  ocupacion = "Ingeniero de Sistemas"
}

object "declaracion2023:Declaracion" as declaracion1 {
  anio = 2023
  estado = "Pendiente"
  ingresoAnual = 24500.00
  gastosDeducibles = 8750.00
  baseImponible = 15750.00
  impuestoCausado = 515.00
  impuestoRetenido = 200.00
  saldoAPagar = 315.00
}

object "enero:Sueldo" as sueldo1 {
  mes = 1
  monto = 2000.00
  aporteIESS = 189.00
  impuestoRetenido = 0.00
}

object "febrero:Sueldo" as sueldo2 {
  mes = 2
  monto = 2000.00
  aporteIESS = 189.00
  impuestoRetenido = 0.00
}

object "facturaSalud:Factura" as factura1 {
  numero = "001-002-000123456"
  proveedor = "Hospital San Vicente"
  fecha = "2023-03-15"
  monto = 500.00
  iva = 60.00
  categoria = SALUD
  deducible = true
}

object "facturaEducacion:Factura" as factura2 {
  numero = "001-001-000789123"
  proveedor = "Universidad Nacional"
  fecha = "2023-06-20"
  monto = 1200.00
  iva = 0.00
  categoria = EDUCACION
  deducible = true
}

object "facturaVivienda:Factura" as factura3 {
  numero = "002-001-000456789"
  proveedor = "Inmobiliaria XYZ"
  fecha = "2023-09-05"
  monto = 800.00
  iva = 96.00
  categoria = VIVIENDA
  deducible = true
}

object "tablaImpuesto2023:TablaImpuestoRenta" as tabla1 {
  anio = 2023
}

object "rangoBase:RangoImpuesto" as rango1 {
  fraccionBasica = 0.00
  fraccionExcedente = 11310.00
  impuestoFraccionBasica = 0.00
  porcentajeFraccionExcedente = 0.00
}

object "rango1:RangoImpuesto" as rango2 {
  fraccionBasica = 11310.00
  fraccionExcedente = 14410.00
  impuestoFraccionBasica = 0.00
  porcentajeFraccionExcedente = 0.05
}

object "controladorSistema:SistemaController" as controller1 {
}

object "menuApp:MenuPrincipal" as menu1 {
}

' RELACIONES ENTRE OBJETOS
contribuyente1 -- declaracion1
declaracion1 o-- sueldo1
declaracion1 o-- sueldo2
declaracion1 o-- factura1
declaracion1 o-- factura2
declaracion1 o-- factura3
declaracion1 -- tabla1
tabla1 o-- rango1
tabla1 o-- rango2
menu1 --> controller1
controller1 --> contribuyente1
controller1 --> declaracion1

@enduml